--- a/style.css
+++ b/style.css
@@ -31,3 +31,9 @@ img {
 header input {
   margin-top: 15px;
 }
+
+footer{
+  text-align: center;
+  margin-top: 40px;
+  border-top: #333 solid 1px;
+}
